force-app/main/default/objects/MileyRequest__c/MileyRequest__c.object-meta.xml
<CustomObject>
    <description>Temporary object added to track any failures due to DIpatchId missing in the incoming request.</description>
    <label>Miley Request</label>
    <nameField>
        <label>Method</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Miley Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>