force-app/main/default/objects/MileyRequest__c/fields/DispatchId__c.field-meta.xml
<CustomField>
    <fullName>DispatchId__c</fullName>
    <formula>REVERSE(LEFT(REVERSE(URI__c), FIND(&apos;/&apos;, REVERSE(URI__c)) - 1))</formula>
    <label>Dispatch Id</label>
    <type>Text</type>
</CustomField>