force-app/main/default/objects/MileyRequest__c/fields/Param__c.field-meta.xml
<CustomField>
    <fullName>Param__c</fullName>
    <label>Param</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>